--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
     "license": "ISC",
     "dependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.5",
-        "@nomiclabs/hardhat-web3": "^2.0.0",
         "@nomiclabs/hardhat-waffle": "^2.0.2",
-        "chai": "^4.3.6",
-        "ethereum-waffle": "^3.4.0",
-        "ethers": "^5.5.4",
-        "hardhat": "^2.8.4",
+        "@nomiclabs/hardhat-web3": "^2.0.0",
         "@typechain/ethers-v5": "^9.0.0",
         "@typechain/hardhat": "^4.0.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.1.0",
         "@types/node": "^17.0.21",
+        "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "child_process": "^1.0.2",
+        "ethereum-waffle": "^3.4.0",
+        "ethers": "^5.5.4",
+        "hardhat": "^2.8.4",
+        "prettier": "^2.5.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.19",
         "ts-generator": "^0.1.1",
         "ts-node": "^10.6.0",
         "typechain": "^7.0.0",
