--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.5",
+        "@nomiclabs/hardhat-etherscan": "^3.0.3",
         "@nomiclabs/hardhat-waffle": "^2.0.2",
         "@nomiclabs/hardhat-web3": "^2.0.0",
         "@remix-project/remixd": "^0.5.6",
@@ -33,5 +34,8 @@
         "typechain": "^7.0.0",
         "typescript": "^4.6.2",
         "web3": "^1.7.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.0"
     }
 }
