--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "web3": "^1.7.1"
     },
     "dependencies": {
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "hardhat-gas-reporter": "^1.0.8"
     }
 }
