--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "^2.0.5",
+        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
         "@nomiclabs/hardhat-etherscan": "^3.0.3",
         "@nomiclabs/hardhat-waffle": "^2.0.2",
         "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -26,7 +26,8 @@
         "child_process": "^1.0.2",
         "ethereum-waffle": "^3.4.0",
         "ethers": "^5.5.4",
-        "hardhat": "^2.8.4",
+        "hardhat": "^2.10.2",
+        "hardhat-deploy": "^0.11.12",
         "prettier": "^2.5.1",
         "prettier-plugin-solidity": "^1.0.0-beta.19",
         "ts-generator": "^0.1.1",
