Deprecate Rinkeby testnet and Migrate Goerli testnet

--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,8 @@
-# Testnet (Rinkeby)
+# Testnet (goerli)
 
-INFURA_END_POINT_RINKEBY=
+INFURA_END_POINT_GOERLI=
 
-RINKEBY_WALLET_PRIVATE_KEY=
+GOERLI_WALLET_PRIVATE_KEY=
 
 # Mainnet
 
