--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@nomiclabs/hardhat-etherscan": "^3.0.3",
         "@nomiclabs/hardhat-waffle": "^2.0.2",
         "@nomiclabs/hardhat-web3": "^2.0.0",
+        "@openzeppelin/contracts": "^4.8.0",
+        "@openzeppelin/test-helpers": "^0.5.16",
         "@remix-project/remixd": "^0.5.6",
         "@typechain/ethers-v5": "^9.0.0",
         "@typechain/hardhat": "^4.0.0",
@@ -24,6 +26,7 @@
         "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "child_process": "^1.0.2",
+        "erc721a": "^4.2.3",
         "ethereum-waffle": "^3.4.0",
         "ethers": "^5.5.4",
         "hardhat": "^2.10.2",
