--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-    "name": "hardhat-tutorial",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
-        "@nomiclabs/hardhat-etherscan": "^3.0.3",
-        "@nomiclabs/hardhat-waffle": "^2.0.2",
-        "@nomiclabs/hardhat-web3": "^2.0.0",
-        "@openzeppelin/contracts": "^4.8.0",
-        "@openzeppelin/test-helpers": "^0.5.16",
-        "@remix-project/remixd": "^0.5.6",
-        "@typechain/ethers-v5": "^9.0.0",
-        "@typechain/hardhat": "^4.0.0",
-        "@types/chai": "^4.3.0",
-        "@types/chai-as-promised": "^7.1.5",
-        "@types/mocha": "^9.1.0",
-        "@types/node": "^17.0.21",
-        "chai": "^4.3.6",
-        "chai-as-promised": "^7.1.1",
-        "child_process": "^1.0.2",
-        "erc721a": "^4.2.3",
-        "ethereum-waffle": "^3.4.0",
-        "ethers": "^5.5.4",
-        "hardhat": "^2.10.2",
-        "hardhat-deploy": "^0.11.12",
-        "prettier": "^2.5.1",
-        "prettier-plugin-solidity": "^1.0.0-beta.19",
-        "ts-generator": "^0.1.1",
-        "ts-node": "^10.6.0",
-        "typechain": "^7.0.0",
-        "typescript": "^4.6.2",
-        "web3": "^1.7.1"
-    },
-    "dependencies": {
-        "dotenv": "^16.0.0",
-        "hardhat-gas-reporter": "^1.0.8"
-    }
+	"name": "hardhat-tutorial",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@ethersproject/providers": "^5.7.2",
+		"@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
+		"@nomiclabs/hardhat-etherscan": "^3.0.3",
+		"@nomiclabs/hardhat-waffle": "^2.0.2",
+		"@nomiclabs/hardhat-web3": "^2.0.0",
+		"@openzeppelin/contracts": "^4.8.0",
+		"@openzeppelin/test-helpers": "^0.5.16",
+		"@remix-project/remixd": "^0.5.6",
+		"@typechain/ethers-v5": "^9.0.0",
+		"@typechain/hardhat": "^4.0.0",
+		"@types/chai": "^4.3.0",
+		"@types/chai-as-promised": "^7.1.5",
+		"@types/mocha": "^9.1.0",
+		"@types/node": "^17.0.21",
+		"chai": "^4.3.6",
+		"chai-as-promised": "^7.1.1",
+		"child_process": "^1.0.2",
+		"closedsea": "^1.0.0",
+		"dotenv": "^16.0.0",
+		"erc721a": "^4.2.3",
+		"ethereum-waffle": "^3.4.0",
+		"ethers": "^5.5.4",
+		"hardhat": "^2.10.2",
+		"hardhat-deploy": "^0.11.12",
+		"hardhat-gas-reporter": "^1.0.8",
+		"prettier": "^2.5.1",
+		"prettier-plugin-solidity": "^1.0.0-beta.19",
+		"solidity-coverage": "^0.8.2",
+		"ts-generator": "^0.1.1",
+		"ts-node": "^10.6.0",
+		"typechain": "^7.0.0",
+		"typescript": "^4.6.2",
+		"web3": "^1.7.1"
+	}
 }
