Change hardhat.config.ts - Add solidity-coverage - Change name INFURA -> NODE

--- a/.env.local
+++ b/.env.local
@@ -1,20 +1,16 @@
 # Testnet (goerli)
-
-INFURA_END_POINT_GOERLI=
-
+NODE_END_POINT_GOERLI=
 GOERLI_WALLET_PRIVATE_KEY=
+CONTRACT_ADDRESS_GOERLI = 
 
 # Mainnet
-
-INFURA_END_POINT_MAINNET=
-
+NODE_END_POINT_MAINNET=
 MAINNET_WALLET_PRIVATE_KEY=
+CONTRACT_ADDRESS_MAINNET = 
 
 # Etherscan
-
 ETHER_SCAN_API=
 
 # Deploy metadata
-
 METADATA_URI =
-ROYALTY_FEE = 1000
+ROYALTY_FEE = 
